apps/homerun2/components/light-catcher-tabletennis/route/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homerun2-light-catcher
  namespace: ${HOMERUN2_LIGHT_CATCHER_TABLETENNIS_NAMESPACE:-homerun2-tabletennis}
spec:
  parentRefs:
    - name: ${GATEWAY_NAME}
      namespace: ${GATEWAY_NAMESPACE:-default}
  hostnames:
    - ${HOMERUN2_LIGHT_CATCHER_TABLETENNIS_HOSTNAME:-light-catcher-tabletennis}.${DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homerun2-light-catcher
          port: 80
